@@ -16,6 +16,7 @@
   * Added the lsl.misc.ionosphere module to help with computing the dispersion and rotation measure of the ionosphere
   * Added a new script, getIonosphericRM.py, that uses the lsl.misc.ionosphere module to estimate the rotation measure during an observation
   * Added a new VDIF reader
+  * Improved the speed of the 4-bit TBW, TBN, and DRX reads through look-up tables
 
 1.0.3
   * Fixed a bug in the inspectTarball.py script that caused it to crash on TBN/TBW metadata
